// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display bubbles 1`] = `
<Bubble
  color={undefined}
  key="0"
  link={undefined}
  onClick={undefined}
  r={45}
  tooltip={undefined}
  x={-10}
  y={52.3015873015873}
>
  <circle
    className="bubble-chart-bubble"
    onClick={undefined}
    r={45}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-10, 52.3015873015873)"
  />
</Bubble>
`;

exports[`should display bubbles 2`] = `
<Bubble
  color={undefined}
  key="1"
  link={undefined}
  onClick={undefined}
  r={33.57142857142857}
  tooltip={undefined}
  x={-75}
  y={33.57142857142857}
>
  <circle
    className="bubble-chart-bubble"
    onClick={undefined}
    r={33.57142857142857}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-75, 33.57142857142857)"
  />
</Bubble>
`;

exports[`should render bubble links 1`] = `
<Bubble
  color={undefined}
  key="0"
  link="foo"
  onClick={undefined}
  r={45}
  tooltip={undefined}
  x={-10}
  y={52.3015873015873}
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to="foo"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <circle
        className="bubble-chart-bubble"
        onClick={undefined}
        r={45}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(-10, 52.3015873015873)"
      />
    </a>
  </Link>
</Bubble>
`;

exports[`should render bubble links 2`] = `
<Bubble
  color={undefined}
  key="1"
  link="bar"
  onClick={undefined}
  r={33.57142857142857}
  tooltip={undefined}
  x={-75}
  y={33.57142857142857}
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to="bar"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <circle
        className="bubble-chart-bubble"
        onClick={undefined}
        r={33.57142857142857}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(-75, 33.57142857142857)"
      />
    </a>
  </Link>
</Bubble>
`;

exports[`should render bubbles with click handlers 1`] = `
<Bubble
  color={undefined}
  key="0"
  link="foo"
  onClick={[Function]}
  r={45}
  tooltip={undefined}
  x={-10}
  y={52.3015873015873}
>
  <circle
    className="bubble-chart-bubble"
    onClick={[Function]}
    r={45}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-10, 52.3015873015873)"
  />
</Bubble>
`;

exports[`should render bubbles with click handlers 2`] = `
<Bubble
  color={undefined}
  key="1"
  link="bar"
  onClick={[Function]}
  r={33.57142857142857}
  tooltip={undefined}
  x={-75}
  y={33.57142857142857}
>
  <circle
    className="bubble-chart-bubble"
    onClick={[Function]}
    r={33.57142857142857}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-75, 33.57142857142857)"
  />
</Bubble>
`;
